(In Git)

 === New features 
	* Change Rakefile to run all specs and features, as well as prepare the db (Mischa Fierer)
  * Allow for array to be passed into deliver_to matcher. (Diego Carrion)
  * Added matcher for checking if a collection of emails includes an email with a particular subject (Luke Melia, Noah Davis)
  * Introduced hook to convert objects to email addresses (Luke Melia and Lee Bankewitz)

    This allows you, in your step matcher, to say something like:
    maillbox_for(some_user)

    Use it in your cucumber env.rb like so:

      EmailSpec::AddressConverter.instance.conversion do |input|
       if input.is_a?(User)
         input.email
       else
         input
       end
      end

=== Bufixes
 * Isolated variances between using email-spec with an ARMailer project. (Luke Melia)
 

== 0.0.9 2008-2-15
 === New features
  * have_body_text, have_header matchers (Luke Melia)
  * EmailViewer - opens all sent emails in a given scenario when the environment variables are set. (Luke Melia)
  * Added compatibility with using ARMailer in test mode. (Luke Melia)
 === Bugfixes
  * set_current_email now works with multiple addresses in To field. (Brian McManus, Ben Mabey)

== 0.0.7 2008-1-20
 === New features
  * have_subject matcher (Ben Mabey)

== 0.0.6 2008-12-23
 === New features
  * Improved RSpec documentation and refactorings. (Ben Mabey)
 === Bugfixes
  * Removed sample app Rake Tasks to have it play nice with environments that use Cucumber as plugin- not gem. (Ben Mabey, Ivor- on github)

== 0.0.5 2008-12-18
  * Initial release - see this post for full history and contributors: http://www.benmabey.com/2008/12/18/github-rocks/