@@ -95,27 +95,34 @@ module EmailSpec
       email_spec_hash[:current_email] = email
     end
         
-    def parse_email_for_link(email, link_text_or_regex)
-      email.should have_body_text(link_text_or_regex)
-      regex = link_text_or_regex
+    def parse_email_for_link(email, text_or_regex)
+      email.should have_body_text(text_or_regex)
+      
+      url = parse_email_for_explicit_link(email, text_or_regex) 
+      url ||= parse_email_for_anchor_text_link(email, text_or_regex)
+
+      raise "No link found matching #{text_or_regex.inspect} in #{email}" unless url
+      url
+    end
+    
+    # e.g. confirm in http://confirm
+    def parse_email_for_explicit_link(email, regex)
       regex = /#{Regexp.escape(regex)}/ unless regex.is_a?(Regexp)
       url = links_in_email(email).detect { |link| link =~ regex }
-      raise "No link found matching #{regex.inspect} in #{email}" unless url
-      URI::parse(url).request_uri
-      # 
-      # if link_text =~ %r{^/.*$}
-      #   # if it's an explicit link
-      #   link_text
-      # elsif email.body =~ %r{<a[^>]*href=['"]?([^'"]*)['"]?[^>]*?>[^<]*?#{link_text}[^<]*?</a>}
-      #   # if it's an anchor tag
-      #   URI.split($~[1])[5..-1].compact!.join("?").gsub("&amp;", "&")
-      #   # sub correct ampersand after rails switches it (http://dev.rubyonrails.org/ticket/4002) 
-      #   # TODO: outsource this kind of parsing to webrat or someone else
-      # end
+      URI::parse(url).request_uri if url
     end
+    
+    # e.g. Click here in  <a href="http://confirm">Click here</a>
+    def parse_email_for_anchor_text_link(email, link_text)
+      email.body =~ %r{<a[^>]*href=['"]?([^'"]*)['"]?[^>]*?>[^<]*?#{link_text}[^<]*?</a>}
+      URI.split($~[1])[5..-1].compact!.join("?").gsub("&amp;", "&")
+      # sub correct ampersand after rails switches it (http://dev.rubyonrails.org/ticket/4002) 
+    end
+
     
     def convert_address(address)
       AddressConverter.instance.convert(address)
     end
   end
 end
+
